--- a/project9_cohort4-master/project9_cohort4.client/src/app/batool/nav-bar/nav-bar.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/batool/nav-bar/nav-bar.component.html
@@ -26,6 +26,12 @@
             <a routerLink="about-us.html" class="slide-vertical" data-splitting>About</a>
           </li>
           <li class="menu-link">
+            <a routerLink="/team" class="slide-vertical" data-splitting>Team</a>
+          </li>
+          <li class="menu-link">
+            <a routerLink="/services" class="slide-vertical" data-splitting>Our Services</a>
+          </li>
+          <li class="menu-link">
             <a routerLink="/addpost" class="slide-vertical" data-splitting>Add Post</a>
           </li>
           <li class="menu-link">
