--- a/project9_cohort4-master/project9_cohort4.client/src/app/Adoptioh/animals/animals.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/Adoptioh/animals/animals.component.html
@@ -439,7 +439,7 @@
           </ul>
         </div>
         <div class="col-xl-5 col-sm-6 me-auto d-none d-sm-block">
-          <div class="reveal-bottom inner-hero-banner">
+          <div>
             <img class="w-100" src="assets/images/inner-hero-banner.png" alt="inner hero banner">
           </div>
         </div>
