--- a/project9_cohort4-master/project9_cohort4.client/src/app/Adoptioh/animals/animals.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/Adoptioh/animals/animals.component.html
@@ -432,10 +432,10 @@
     <div class="container position-relative">
       <div class="row g-6 justify-content-between align-items-center">
         <div class="col-sm-6">
-          <span class="mb-3 text-h1 text-n20">Shop</span>
+          <span class="mb-3 text-h1 text-n20">Animals</span>
           <ul class="breadcrumb d-inline-flex align-items-center justify-content-center gap-lg-2 gap-1">
             <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-            <li class="breadcrumb-item active"><a href="#">Shop</a></li>
+            <li class="breadcrumb-item active"><a href="#">Animals</a></li>
           </ul>
         </div>
         <div class="col-xl-5 col-sm-6 me-auto d-none d-sm-block">
