--- a/project9_cohort4-master/project9_cohort4.client/src/app/batool/nav-bar/nav-bar.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/batool/nav-bar/nav-bar.component.html
@@ -23,7 +23,7 @@
             <a routerLink="/" class="slide-vertical" data-splitting>Home</a>
           </li>
           <li class="menu-link">
-            <a routerLink="about-us.html" class="slide-vertical" data-splitting>About</a>
+            <a routerLink="/about" class="slide-vertical" data-splitting>About</a>
           </li>
           <li class="menu-link">
             <a routerLink="/team" class="slide-vertical" data-splitting>Team</a>
